# duckdb-in-action

./: README.md  pyproject.toml
