[project]
name = "duckdb-in-action"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "duckdb>=1.0.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "Apache 2.0"}


[project.optional-dependencies]
notebook = [
    "notebook>=7.2.1",
]
[tool.pdm]
distribution = false
